# dunspars

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: dunspars.yml  release.yml  rust.yml
configs/: config.yaml  custom.yaml
src/: api.rs  cli.rs  data.rs  lib.rs  main.rs  models.rs  pokemon.rs  resource.rs
src/api/: convert.rs  once.rs  resource.rs  utils.rs
src/cli/: commands.rs  display.rs  utils.rs
src/data/: api.rs  once.rs  resource.rs
src/models/: database.rs  resource.rs
src/resource/: config.rs  custom.rs  database.rs  trainers.rs
src/snapshots/: dunspars__api__tests__get_evolution_steps-3.snap  dunspars__api__tests__get_evolution_steps.snap  dunspars__api__tests__get_evolution_test-2.snap  dunspars__cli__tests__run_ability.snap  dunspars__cli__tests__run_coverage.snap  dunspars__cli__tests__run_match-2.snap  dunspars__cli__tests__run_match-3.snap  dunspars__cli__tests__run_match.snap  dunspars__cli__tests__run_move.snap  dunspars__cli__tests__run_pokemon.snap  dunspars__cli__tests__run_pokemon_evolution-2.snap  dunspars__cli__tests__run_pokemon_evolution-3.snap  dunspars__cli__tests__run_pokemon_evolution.snap  dunspars__cli__tests__run_pokemon_moves.snap  dunspars__cli__tests__run_type.snap  dunspars__models__tests__get_pokemon_evolution-2.snap  dunspars__models__tests__get_pokemon_evolution-3.snap  dunspars__models__tests__get_pokemon_evolution.snap
src/sql/: create_schema.sql  game.sql  insert_ability.sql  insert_change_move_value.sql  insert_evolution.sql  insert_meta.sql  insert_move.sql  insert_move_change.sql  insert_pokemon.sql  insert_pokemon_ability.sql  insert_pokemon_move.sql  insert_pokemon_type_change.sql  insert_species.sql  insert_type.sql  insert_type_change.sql  move.sql  select_pokemon_abilities.sql  (+1 more)
templates/: config.yaml
(+33 files in other folders)
