[package]
name = "dunspars"
authors = ["Ian Juarez"]
description = "CLI using the PokéAPI."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rustemon = "3.3.0"
clap = { version = "4.4.16", features = ["derive"] }
serde = "1.0.195"
serde_json = "1.0.111"
anyhow = "1.0.79"
owo-colors = "4.0.0"
futures = "0.3.30"
indoc = "2.0.4"
regex = "1.10.3"
