[package]
name = "dunspars"
authors = ["Ian Juarez"]
description = "CLI using the PokéAPI."
version = "0.0.0"
edition = "2021"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
strip = "debuginfo"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustemon = { version = "3.4.0", default-features = false, features = ["in-memory-cache"] }
clap = { version = "4.4.16", features = ["derive"] }
serde = "1.0.195"
serde_yaml = "0.9.32"
serde_json = "1.0.114"
anyhow = "1.0.79"
anstyle = "1.0.6"
futures = "0.3.30"
indoc = "2.0.4"
regex = "1.10.3"
dirs = "5.0.1"
strsim = "0.11.0"
rusqlite = "0.31.0"
semver = "1.0.22"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
